--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -34,13 +34,14 @@ form{
 input{
     background-color: rgb(51, 51, 51);
     border: 1px solid rgb(128, 127, 127);
+    color: white;
     height: 40px;
     width: 300px;
     border-radius: 10px;
     margin-bottom: 30px;
     margin-top: 10px;
 }
-button{
+.login{
     height: 40px;
     width: 300px;
     border: 0px;
