--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .log{
     color: white;
-    background-color: rgb(4, 4, 223);
+    background-color: rgb(2, 2, 130);
     font-weight: bold;
-    height:40px;
-    width:200px;
+    height:50px;
+    width:250px;
     border: 0px;
     border-radius: 10px;
     margin: 20px;
-    margin-left: 200px;
+    margin-left: 180px;
+    font-size: large;
 }
 .home{
     height: 500px;
@@ -17,4 +18,51 @@
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
+}
+.main{
+    display: flex;
+    justify-content: space-between;
+
+}
+.sidebar{
+    height: 100vh;
+    width: 320px;
+    background-color: rgba(1, 16, 65, 0.373);
+    padding-top: 70px;
+    border-right: 1px solid rgb(12, 30, 82);
+}
+hr{
+    border: 1px solid rgb(12, 30, 82);
+}
+.chatlist{
+    height: 70vh;
+}
+.newchat{
+    background: #aa0ce8;
+    background: linear-gradient(269deg, rgba(170, 12, 232, 1) 0%, rgba(36, 83, 224, 1) 82%);
+    border: 0px;
+    height: 50px;
+    width: 280px;
+    display: block;
+    margin: auto;
+    border-radius: 15px;
+    color: white;
+    font-weight: bolder;
+    font-size: large;
+}
+.search{
+    height: 33px;
+    width: 280px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(22, 42, 101);
+    border: 1px solid rgb(12, 30, 82);
+    border-radius: 8px;
+    
+}
+.chat{
+    height: 100vh;
+    width: 160vh;
+    color: white;
 }
