--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -31,7 +31,7 @@ form{
     margin-left: 50px;
     margin-top: 40px;
 }
-input{
+.loginput{
     background-color: rgb(51, 51, 51);
     border: 1px solid rgb(128, 127, 127);
     color: white;
