--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,11 @@ hr{
     width: 160vh;
     color: white;
 }
+.contact{
+    height: 80px;
+    width: 320px;
+    background-color: rgba(21, 44, 117, 0.373);
+    border-radius: 10px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
