--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@
     height: 100vh;
     width: 320px;
     background-color: rgba(1, 16, 65, 0.373);
-    padding-top: 70px;
     border-right: 1px solid rgb(12, 30, 82);
 }
 hr{
@@ -59,12 +58,14 @@ hr{
     background-color: rgb(22, 42, 101);
     border: 1px solid rgb(12, 30, 82);
     border-radius: 8px;
+    margin-top: 10px;
     
 }
-.chat{
+.window{
     height: 100vh;
-    width: 160vh;
+    width: 190vh;
     color: white;
+    position: relative;
 }
 .contact{
     height: 80px;
@@ -73,4 +74,43 @@ hr{
     border-radius: 10px;
     margin-bottom: 2px;
     margin-top: 2px;
+    display: flex;
+}
+.logout{
+    width: 100px;
+    height: 40px;  
+    background-color: blue;  
+    font-weight: bolder;
+    border-radius: 20px;
+    color: white;
+    border: 0;
+    
+}
+
+button {
+    cursor: pointer;
+}
+
+.chatbox{
+    height: 100px;
+    width: 400px;
+    background-color: #aa0ce8;
+}
+
+.sendmessage{
+    height: 50px;
+    width: 150vh;
+    background-color: rgb(140, 80, 196);
+    border-radius: 10px;
+    border: 1px solid #aa0ce8;
+    color: white;
+}
+.sendbutton{
+    height: 50px;
+    width: 100px;
+    border: 0px;
+    background-color: blue;
+    color: white;
+    font-weight: bolder;
+    border-radius: 10px;
 }
